<resources>
    <string name="app_name">Менеджер паролей</string>
    <string name="site_label">Сайт</string>
    <string name="find">Найти</string>
    <string name="add">Добавить</string>
    <string name="login">Логин:</string>
    <string name="password">Пароль:</string>
    <string name="site_name">Название сайта</string>
    <string name="site_url">Адрес сайта</string>
    <string name="login_acc">Логин</string>
    <string name="password_acc">Пароль</string>
    <string name="description">Описание</string>
    <string name="Done">Готово</string>
    <string name="change">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="generate">Сгенерировать</string>
    <string name="length">Длина</string>
    <string name="symbols">Символы</string>
    <string name="digits">Цифры</string>
    <string name="eng">Английские</string>
    <string name="rus">Русские</string>
    <string name="complexity">Сложность</string>
    <string name="generation_key">Ключ генерации</string>
    
    <string-array name="complexities">
        <item>Случайно</item>
        <item>Сдвиг по алфавиту</item>
        <item>Случайные преобразования ключа</item>
    </string-array>
</resources>
